styled errors component

--- a/views/partials/errors.ejs
+++ b/views/partials/errors.ejs
@@ -1,7 +1,9 @@
-<% if (locals.errors) {%>
-  <ul>
-    <% errors.forEach(function(error) { %>
-      <li><%= error.msg %></li>
-    <% }); %>
-  </ul>
+<% if (locals.errors) { %>
+  <div class="form-errors">
+    <ul class="form-errors-list">
+      <% errors.forEach((error) => { %>
+        <li class="form-error"><%= error.msg %></li>
+      <% }) %>
+    </ul>
+  </div>
 <% } %>
